-*- mode: outline -*-

* Version 0.7.x, released

** bugfixes

Fixed extraction of files on SBCL, CMUCL, and Lispworks.  (Thanks to
Elliot Slaughter.)

Fixed compilation error in CLISP.  (Thanks to Elliot Slaughter.)

Fixed calling out to _stat on Lispworks/Win32.  (Thanks to Luke Crook.)

* Version 0.7, released 09-02-2008

** bugfixes

Due to a packaging snafu, the Lispworks/Win32 support contributed by
Sean Ross was not included in previous versions.  This oversight has
been fixed.

ARCHIVE now works correctly with archives created by BSD tar variants.
(Thanks to Matthew Kennedy.)

ARCHIVE now works much better on Win32 SBCL.  (Thanks to Matthew
Kennedy.)

* Version 0.6, released 30-04-2007

** incompatible changes

The :WRITE-FILE-DATA argument to WRITE-ENTRY-TO-STREAM has been
renamed to :STREAM and its semantics changed.  Please see the
documentation string for details about the semantics of :STREAM.

The dependence on FLEXI-STREAMS has been removed; ENTRY-STREAM now
returns a stream with element-type (UNSIGNED-BYTE 8).  This was done to
facilitate using implementation-dependent translation streams.

** bugfixes

The names of the archive classes (TAR-ARCHIVE, ODC-CPIO-ARCHIVE,
SVR4-CPIO-ARCHIVE) have been exported from ARCHIVE for easier access.

Error checking for READ-ENTRY-FROM-ARCHIVE and WRITE-ENTRY-TO-ARCHIVE
has been tightened.

** new features

ARCHIVE now knows how to extract directories.

WITH-OPEN-ARCHIVE now accepts either a pathname or a stream from which
to open an archive.  (Thanks to Sean Ross.)

ARCHIVE can now create archives on Lispworks/Win32.  (Thanks to Sean
Ross.)

A new generic function, (SETF NAME) has been added for setting the
name of an archive entry.

A family of functions, ENTRY-<foo>-P, have been added for determining
what sort of file an entry is associated with.  Please see the
documentation strings for these functions for details.

* Version 0.5, released 12-01-2006

The README contains a few examples of the library's use.
